# bitchat-rust

./: Cargo.toml
src/: bitchat_packet.rs  main.rs  ui.rs
src/mesh/: connection_manager.rs  fragment_manager.rs  message_handler.rs  mod.rs  packet_processor.rs  peer_manager.rs  protocol.rs  security_manager.rs  service.rs
