[package]
name = "bitchat-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "sync", "macros"] }
btleplug = "0.10"
crossterm = "0.25"
ratatui = "0.20"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
anyhow = "1.0"
byteorder = "1.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
# Add your crypto crates here
